--- a/Names.cabal
+++ b/Names.cabal
@@ -6,7 +6,7 @@ version:             0.1.0.0
 -- synopsis:            
 -- description:         
 -- license:             
-license-file:        LICENSE
+-- license-file:        LICENSE
 -- author:              
 -- maintainer:          
 -- copyright:           
@@ -17,8 +17,9 @@ cabal-version:       >=1.10
 
 executable Names
   main-is:             Main.hs
+  ghc-options:         -O2 -threaded
   -- other-modules:       
   other-extensions:    FlexibleInstances, OverloadedStrings
-  build-depends:       base >=4.7 && <4.8, containers >=0.5 && <0.6, vector >=0.10 && <0.11, random >=1.0 && <1.1, MonadRandom >=0.1 && <0.2, transformers >=0.4 && <0.5
+  build-depends:       base >=4.7 && <4.8, containers >=0.5 && <0.6, vector >=0.10 && <0.11, random >=1.0 && <1.1, MonadRandom >=0.1 && <0.2, transformers >=0.4 && <0.5, strict, text-normal, text, hierarchical-clustering, diagrams, SVGFonts, diagrams-svg, diagrams-lib, directory, ansi-terminal, parallel-io, mtl, deepseq, cmdargs, binary, bytestring, filepath
   -- hs-source-dirs:      
   default-language:    Haskell2010
